# spanner

./: .gitignore  CMakeLists.txt  README.md
headers/: graph.hpp  minheap.hpp  util.hpp
input/: worms20_10NN.mtx
plots/: plot.gnu
plots/2k-1-spanner/: execution_time.txt  spanner_size.txt  stepwise_time.txt
plots/3-spanner/: execution_time.txt  spanner_size.txt  stepwise_time.txt
report/: report.tex
scripts/: generator.py  tests.sh  zero_indexing.py
src/: graph.cpp  main.cpp  minheap.cpp  spanner.cpp  sssp.cu  three_spanner.cpp  util.cpp
